...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTD-O2-xhN" customClass="DMRadioOption" customModule="NewDMComponents" customModuleProvider="target">
                                <rect key="frame" x="62" y="218" width="26" height="26"/>
                                <accessibility key="accessibilityConfiguration" identifier="radio2"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="26" id="6aX-S6-5Eg"/>
                                    <constraint firstAttribute="height" constant="26" id="f1z-1h-Xax"/>
                                </constraints>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpE-mH-7ct" customClass="DMRadioOption" customModule="NewDMComponents" customModuleProvider="target">
                                <rect key="frame" x="62" y="168" width="26" height="26"/>
                                <accessibility key="accessibilityConfiguration" identifier="radio1"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="26" id="pZP-4r-dUw"/>
                                    <constraint firstAttribute="width" constant="26" id="tA4-y3-hT8"/>
                                </constraints>
                                <state key="selected" image="icRadioSelected"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CYz-rc-gkx" customClass="DMCheckBox" customModule="NewDMComponents" customModuleProvider="target">
                                <rect key="frame" x="62" y="354" width="26" height="26"/>
                                <accessibility key="accessibilityConfiguration" identifier="check1"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="26" id="FN0-DH-lFi"/>
                                    <constraint firstAttribute="height" constant="26" id="kyM-ye-vuc"/>
                                </constraints>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="909-Pv-bqB" customClass="DMCheckBox" customModule="NewDMComponents" customModuleProvider="target">
                                <rect key="frame" x="62" y="404" width="26" height="26"/>
                                <accessibility key="accessibilityConfiguration" identifier="check2"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="26" id="5HZ-Iv-wut"/>
                                    <constraint firstAttribute="height" constant="26" id="fJD-pn-oNC"/>
                                </constraints>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="se4-3Y-kar" customClass="DMCheckBox" customModule="NewDMComponents" customModuleProvider="target">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mVo-ME-gur" customClass="DMSelectCounter" customModule="NewDMComponents" customModuleProvider="target">
                                <rect key="frame" x="62" y="623" width="76" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="counter1"/>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select counter 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0b-H3-Sio">
                                <rect key="frame" x="152" y="631" width="123" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
