...
protocol DMSelectCounterDelegate {
    func dmSelectAdd(_ selectCounter: DMSelectCounter)
    func dmSelectRemove(_ selectCounter: DMSelectCounter)
}

class DMSelectCounter: UIView {
    var addButton: UIButton?
    var removeButton: UIButton?
    var labelQuantity: UILabel?
    var delegate: DMSelectCounterDelegate?
    
    var buttonsColor = UIColor(red: 200.0 / 255.0, green: 20.0 / 255.0, blue: 20.0 / 255.0, alpha: 1.0) {
        didSet {
            setNeedsLayout()
...
